--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="header-section">
             <div class="image-container">
-                <img src="./Sfactor.jpeg" alt="S. Factor Dance Crew" loading="lazy">
+                <img src="./sfactor.png" alt="S. Factor Dance Crew" loading="lazy">
                 <div class="christmas-corner top-left">🎄</div>
                 <div class="christmas-corner top-right">🎅</div>
                 <div class="christmas-corner bottom-left">🎁</div>
@@ -49,11 +49,11 @@
                 <div class="contact-details">
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <span>9340744457</span>
+                        <span>9691638423</span>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone-alt"></i>
-                        <span>8305669300</span>
+                        <span>9340073167</span>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
@@ -70,7 +70,7 @@
                 <div class="subtitle">Your one stop performing art solution</div>
                 <div class="proprietor">
                     <span class="label">Proprietor:</span>
-                    <span class="name">MAK-E</span>
+                    <span class="name">MAK-E, Vinay Chandal</span>
                 </div>
                 <div class="christmas-message">Wishing You Joy & Dance This Holiday Season! 🎄✨</div>
             </div>
